--- a/package.json
+++ b/package.json
@@ -5,10 +5,27 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo 'Running Dummy Tests...' && exit 0",
-    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles"
+    
+    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles" 
+  },
+  
+  "jest": {
+    "testEnvironment": "node",
+    
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/server.js",
+      "!src/app.js",
+      "!**/node_modules/**"
+    ],
+    
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "transform": {} 
   },
   "keywords": [
     "smart-home",
@@ -35,12 +52,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
     "supertest": "^7.0.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "transform": {}
+
   }
 }
