--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo 'Running Dummy Tests...' && exit 0",
-    
-    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles" 
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test:coverage": "npm run test -- --coverage"
   },
   
   "jest": {
@@ -22,6 +21,7 @@
       "!**/node_modules/**"
     ],
     
+
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
