--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test NODE_ENV=test JWT_SECRET=testsecret123 JWT_EXPIRES_IN=1d node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
     "test:coverage": "npm run test -- --coverage"
   },
   
   "jest": {
     "testEnvironment": "node",
-    
+
+    "testTimeout": 30000,
+    "setupFilesAfterEnv": ["./jest.setup.js"],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/server.js",
