--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "cross-env NODE_ENV=test NODE_ENV=test JWT_SECRET=testsecret123 JWT_EXPIRES_IN=1d node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test JWT_SECRET=testsecret123 JWT_EXPIRES_IN=1d node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
     "test:coverage": "npm run test -- --coverage"
   },
   
