--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,8 @@ jobs:
         npm start &
         sleep 15
 
-    - name: Install k6
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y k6
+    - name: Setup k6
+      uses: grafana/setup-k6-action@v1
 
     - name: Run k6 Login Load & Spike Tests
       env:
