--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         BASE_URL: http://localhost:8080/api/v1
       run: |
-        k6 run k6/houses-tests.js
+        k6 run k6/house-tests.js
 
   cd_deploy:
     name: Continuous Deployment to Render
