--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
         BASE_URL: http://localhost:8080/api/v1
       run: |
         k6 run k6/house-tests.js
+#comment
 
   cd_deploy:
     name: Continuous Deployment to Render
